--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </a>
       <!-- шапка. адрес -->
       <address class="address">
-        <a href="tel:+7999 555 5555" class="header__address">
+        <a href="tel:+99995555555" class="header__address">
           +9(999) 555 5555
         </a>
         <a href="mailto:info@sobaka.ge" class="header__address">
@@ -49,6 +49,7 @@
           <br>Амстердам                       
       </address>
     </header>
+    <main>
        <!-- СЕКЦИЯ "COVER" (картинка, подложка, заголовок, 
         подзаголовок, кнопка) -->
     <section class="cover">
@@ -188,11 +189,12 @@
         </li>
       </ul>
     </section>
+    </main>
     <!-- СЕКЦИЯ "ПОДВАЛ" -->
     <footer class="footer">
       <!-- адрес подвала -->
       <address class="address">
-        <a href="tel:+7999 555 5555" class="header__address">
+        <a href="tel:+99995555555" class="header__address">
           +9(999) 555 5555
         </a>
         <a href="mailto:info@sobaka.ge" class="header__address">
